@@ -38,6 +38,9 @@
 <p>2015-01-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/gif.c (WriteGIFImage): Don't use an unchecked value from
+GetImageAttribute(), even if the access succeeded before.
+Resolves Coverity CID 10219.</li>
 <li>coders/dpx.c (StringToAttribute): Make sure that string is not
 accidentally shortened by one character if it occupies the full
 field size.
